fixed icon stretch on firefox

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -16,8 +16,8 @@ h2{
 
 .expand-collapse-button{
   background: transparent;
-  border-radius: 50%;
-  border: solid black 1px;
+  border: none;
+  margin: 1px;
 }
 
 .expand-collapse-button:hover{
